# solar-cover

./: .gitignore  AGENTS.md  LICENSE  README.md  bootstrap-governance.sh  hacs.json  pyproject.toml
.agent/: governance.md
.agent/active/: claims.md  roster.md
.github/workflows/: release.yml  validate.yml
custom_components/solar_cover/: __init__.py  button.py  config_flow.py  const.py  coordinator.py  cover.py  diagnostics.py  geometry.py  intent.py  manifest.json  sensor.py  solar.py  strings.json  switch.py
custom_components/solar_cover/translations/: en.json
docs/: 2026-05-27-design.md
docs/handoffs/: index.md
docs/sprints/: SPRINT_1.md  SPRINT_LEDGER.md
docs/superpowers/plans/: 2026-05-27-solar-cover-implementation.md
docs/superpowers/specs/: 2026-05-30-stability-delay-design.md  2026-05-31-detailed-intent-reporting-design.md  2026-06-02-remove-cover-entity-external-move-detection.md
tests/: conftest.py  test_button.py  test_command_behavior.py  test_config_flow.py  test_coordinator_guards.py  test_geometry.py  test_geometry_invariants.py  test_init.py  test_intent.py  test_sensor.py  test_solar.py  test_stability.py  test_switch.py  test_unit_conversion.py
