[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "solar-cover"
version = "0.5.0"
requires-python = ">=3.12"

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
    # pytest-homeassistant-custom-component pins the exact pytest / pytest-asyncio
    # / numpy versions that match its target Home Assistant release, and Home
    # Assistant pins astral -- so let them be the sole source of truth. Do NOT pin
    # pytest, pytest-asyncio, numpy, or astral here: independent pins conflict with
    # those exact transitive pins (e.g. astral>=3.2 vs HA's astral 2.2). The PHACC
    # floor must stay high -- older releases pin pytest-asyncio==0.23.4 (pytest<8),
    # and a low floor lets pip backtrack into them and dead-end.
    "pytest-homeassistant-custom-component>=0.13.200",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["custom_components*"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["."]
